<resources>
    <string name="app_name">Hotrip</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="explore">Explore</string>
    <string name="search">Search</string>
    <string name="account">Account</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login">Login</string>
    <string name="login_here">Login Here</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="signup_login_hint">Already have an account? Login</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="username">Username</string>
    <string name="register">Register</string>
    <string name="email">Email</string>
    <string name="your_travel_assistant">Your Travel Assistant</string>
    <string name="login_background">login background</string>
    <string name="logout">Logout</string>
    <string name="search_here">Search Here</string>
    <string name="settings">Settings</string>
    <string name="greeting">Selamat Datang Di Hotrip!!</string>
    <string name="recommen">Recommended</string>
    <string name="description">description</string>
    <string name="location">Location</string>
    <string name="review">Review</string>
    <string name="rating">Rating</string>
    <string name="kategory">Kategory</string>
    <string name="title">Title</string>
    <string name="kota">Kota</string>
    <string name="daerah">Daerah</string>
    <string name="the_best_place_to_find_your_next_trip_and_explore_the_world_you_never_knew_before_here">The Best Place To Find Your Next Trip and Explore the world you never knew before here</string>
    <string name="welcome_to_hotrip_app">Welcome To Hotrip App</string>
    <string name="get_started">Get Started</string>
    <string name="API_KEY">AIzaSyCfo9Mqeg-mItN3eRSI87sM-2P_a7Ee1gY</string>


    <string name="your_location">Your Location</string>
    <string name="city_tag">City Tag</string>
    <string name="category">Category</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="akun">Welcome, User</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="provinsi">Provinsi</string>
    <string name="welcome_back">Welcome back, %1$s!</string>
    <string name="welcome_home">Welcome %1$s!</string>
    <string name="greeting_account">Hello %1$s!</string>
    <string name="wishlist">Wishlist Mu</string>
    <string name="based_location">BASED ON THE SELECTED LOCATION</string>
    <string name="based_last_seen">RELATED PLACES</string>
    <string name="beach">Beach</string>
    <string name="natural">Natural</string>
    <string name="tourist_destination">Tourist destination</string>
    <string name="historical">Historical</string>
    <string name="park">Park</string>
    <string name="hiking_area">Hiking Area</string>
    <string name="family_recreation">Family Recreation</string>
    <string name="zoo">Zoo</string>
    <string-array name="cities_array">
        <item>Your Location</item>
        <item>Medan</item>
        <item>Padang</item>
        <item>Batam</item>
        <item>Jakarta</item>
        <item>Yogyakarta</item>
        <item>Lombok</item>
        <item>Bali</item>
    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="fill_in_your_preferences">Fill in Your Preferences</string>
    <string name="mbti">MBTI</string>
    <string name="input_your_mbti_type">Input your MBTI type</string>
    <string name="click_here_to_check">Click here to check</string>
    <string name="preferred_category">Preferred Category</string>
    <string name="travel_style">Travel Style</string>
    <string name="age">Age</string>
    <string name="your_age">Your Age</string>
    <string name="travel_frequency">Travel Frequency</string>
    <string name="submit">Submit</string>
    <string name="submit_for_your_result">Submit For Your Result</string>

    <string-array name="mbti">
        <item>Select MBTI</item>
        <item>INTJ</item>
        <item>INTP</item>
        <item>ENTJ</item>
        <item>ENTP</item>
        <item>INFJ</item>
        <item>INFP</item>
        <item>ENFJ</item>
        <item>ENFP</item>
        <item>ISTJ</item>
        <item>ISFJ</item>
        <item>ESTJ</item>
        <item>ESFJ</item>
        <item>ISTP</item>
        <item>ISFP</item>
        <item>ESTP</item>
        <item>ESFP</item>
    </string-array>


    <string-array name="location_array">
        <item>Select Location</item>
        <item>Medan</item>
        <item>Padang</item>
        <item>Batam</item>
        <item>Jakarta</item>
        <item>Yogyakarta</item>
        <item>Lombok</item>
        <item>Bali</item>
    </string-array>

    <string-array name="category_array">
        <item>Select Category</item>
        <item>Alam</item>
        <item>Sejarah</item>
        <item>Budaya</item>
        <item>Hiking Area</item>
        <item>Hotel</item>
        <item>Kebun Binatang</item>
        <item>Pantai</item>
        <item>Taman</item>
        <item>Rekreasi Keluarga</item>
        <item>Snorkling Area</item>
        <item>Tourist Attraction</item>
        <item>Tujuan Wisata</item>
    </string-array>

    <string-array name="travel_style_array">
        <item>Select Travel Style</item>
        <item>Solo</item>
        <item>Family</item>
        <item>Partner</item>
    </string-array>

    <string-array name="travel_frequency_array">
        <item>Select Frequency</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>