<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.home.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Greeting and Location -->
        <TextView
            android:id="@+id/text_home"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome"
            android:textSize="20sp"
            android:textStyle="bold"
            android:paddingBottom="8dp" />

        <Spinner
            android:id="@+id/spinnerCities"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/your_location"
            android:spinnerMode="dropdown"
            android:layout_marginBottom="16dp"
            style="@style/Widget.AppCompat.Spinner.Underlined"/>

        <!-- Recommendations Based on Location -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/based_location"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecommendationsByLocation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_recomendation_row"
            android:layout_marginBottom="16dp" />

        <!-- Recommendations Based on History -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/based_last_seen"
            android:textStyle="bold"
            android:textSize="16sp"
            android:paddingBottom="8dp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvRecommendationsByHistory"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:overScrollMode="never"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_recomendation_row" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
